Don't print innecesary info
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@9277 13f79535-47bb-0310-9956-ffa450edef68